--- a/elmarra-report.Rmd
+++ b/elmarra-report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Bioarchaeology of Umm el-Marra"
 author: "Ernest K. Batey"
-date: "September 13, 2016"
+date: "`r format(Sys.Date(), '%d %B %Y')`"
 bibliography: elmarra-report.bib
 output: 
   html_document: 
