--- a/elmarra-report.bib
+++ b/elmarra-report.bib
@@ -17,3 +17,20 @@ series = {Research Series},
 publisher = {Arkansas Archeological Survey},
 address = {Fayetteville}
 }
+
+@Book{scott2000anthteeth,
+author = {Richard G. Scott and Christy G. Turner},
+title = {The anthropology of modern human teeth: dental morphology and its variation in recent human populations},
+publisher = {Cambridge University Press},
+year = {2000},
+address = {New York}
+}
+
+@Article{soltysiak2011mmd,
+author = {Arkadiusz Soltysiak},
+title = {Technical Note: An R script for Smith's Mean Measure of Divergence},
+journal = {Bioarchaeology of the Near East},
+year = {2011},
+volume = {5},
+pages = {41--44}
+}
